--- a/package.json
+++ b/package.json
@@ -1,37 +1,5 @@
 {
-  "name": "login",
-  "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "vercel-build": "echo 'Build step completed'",
-    "deploy": "vercel --prod"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.13.2",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.8.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "exceljs": "^4.4.0",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.4.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.3",
-    "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "socket.io": "^4.8.1",
-    "ws": "^8.18.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "migrate": "node migrate-existing-bookings.js"
   }
 }
