--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "exceljs": "^4.3.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "cloudinary": "^1.40.0",
-    "socket.io": "^4.7.2",
+    "node-cache": "^5.1.2",
     "nodemailer": "^6.9.4",
-    "exceljs": "^4.3.0"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
