--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cache": "^5.1.2",
-    "nodemailer": "^6.9.4",
-    "socket.io": "^4.7.2"
+    "nodemailer": "^6.9.4"
+
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
